--- a/templates/play.html
+++ b/templates/play.html
@@ -3,7 +3,7 @@
 
 <h3> {{ title }} </h3>
   <audio controls autoplay>
-    <source src="/static/audio/{{audio_file}}" type="audio/ogg">
+    <source src="{{audio_file}}" type="audio/mp3">
     Your browser does not support this audio format.
   </audio>
 {% endblock %}
