--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,25 @@
 {% extends 'base.html' %}
-{% block play %}
-{% for audio_file in audio_files %}
-<p><a href="{{ url_for("song_route", filename=audio_file) }}"> {{ loop.index }}) {{ audio_file }}</a></p>
+{% block main %}
+{% for song in songs %}
+<div class="col-md-3">
+  <a href="{{ url_for("song_route", filename=song.base_src) }}">
+    <div class="panel panel-info">
+
+  <div class="panel-body">
+      <img class="media-object" src="data:image/png;base64,{{ song.base64_cover or '' }}" alt="{{ song.title }}" style="width: 100%;">
+  </div>
+  <div class="panel-footer">
+    <h3 class="panel-title">{{ song.title }}</h3>
+  </div>
+    </div>
+  </a>
+</div>
+    <!--<div class="media-left">
+        <img class="media-object" src="data:image/png;base64,{{ song.base64_cover or '' }}" alt="{{ song.title }}" style="width: 200px;">
+      </a>
+    </div>
+    <div class="media-body">
+      <h4 class="media-heading"><a href="{{ url_for("song_route", filename=song.base_src) }}">{{ song.title }}</a></h4>
+    </div>-->
 {% endfor %}
 {% endblock %}
