--- a/templates/play.html
+++ b/templates/play.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
-{% block play %}
-
+{% block main %}
 <h3> {{ title }} </h3>
   <audio controls autoplay>
     <source src="{{audio_file}}" type="audio/mp3">
