--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,4 +1,19 @@
 body {
     padding-top: 70px;
     padding-bottom: 30px;
+    margin-bottom: 60px;
 }
+.panel-body.index-card {
+    padding: 0;
+}
+html {
+    position: relative;
+    min-height: 100%;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 110px;
+}
+
