added edit button

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -51,7 +51,7 @@
           <!-- Submit -->
           <div class="form-group">
             <div class="col-md-10 col-md-offset-2">
-              <button type="button" class="btn btn-default">Cancel</button>
+              <a href="{{ url_for('index_route') }}" type="button" class="btn btn-default">Cancel</a>
               <button type="submit" class="btn btn-primary">Submit<div class="ripple-container"></div></button>
             </div>
           </div>
